# cpsc350-assignment2

./: Board.cpp  Board.h  CMakeLists.txt  ClassicBoard.cpp  ClassicBoard.h  DoughnutBoard.cpp  DoughnutBoard.h  GoLSimulation.cpp  GoLSimulation.h  MapFileMismatchException.cpp  MapFileMismatchException.h  MirrorBoard.cpp  MirrorBoard.h  README.md  RuntimeException.cpp  RuntimeException.h  main.cpp
